--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "sequelize": "^6.6.2",
+    "pg": "^8.5.1",
+    "dotenv": "^10.0.0",
+    "bcrypt": "5.1.1"
   }
 }
