--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "5.1.1",
+    "connect-session-sequelize": "^7.0.4",
     "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.1",
     "pg": "^8.5.1",
     "sequelize": "^6.6.2"
   }
